--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
         }
     ],
     "require": {
-        "typo3/cms": ">=6.2.0 <=8.7.99",
-        "typo3/cms-scheduler": ">=6.2.0 <=8.7.99"
+        "typo3/cms": "^9.5",
+        "typo3/cms-scheduler": "^9.5"
     },
     "replace": {
         "loginlimit": "self.version",
