--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         }
     ],
     "require": {
-        "typo3/cms": "^9.5",
+        "typo3/cms-core": "^9.5",
         "typo3/cms-scheduler": "^9.5"
     },
     "replace": {
