--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "homepage": "https://github.com/WebentwicklerAt/typo3-loginlimit",
     "type": "typo3-cms-extension",
     "license": "GPL-2.0+",
+    "version": "9.0.0",
     "authors": [
         {
             "name": "Gernot Leitgab",
@@ -13,8 +14,7 @@
         }
     ],
     "require": {
-        "typo3/cms-core": "^9.5",
-        "typo3/cms-scheduler": "^9.5"
+        "typo3/cms-core": "^9.5"
     },
     "replace": {
         "loginlimit": "self.version",
