--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         }
     ],
     "require": {
-        "typo3/cms-core": "^9.5"
+        "typo3/cms-core": "^9.5  || ^10.4"
     },
     "replace": {
         "loginlimit": "self.version",
