--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -6,3 +6,9 @@ services:
 
     WebentwicklerAt\Loginlimit\:
         resource: '../Classes/*'
+
+    WebentwicklerAt\Loginlimit\Command\CleanupCommand:
+        tags:
+            -   name: 'console.command'
+                command: 'loginlimit:cleanup'
+                schedulable: true
